--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,32 @@
-name: Windows - RustDesk
+name: Disala RDP - Ngrok 001
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    name: Start Building...
     runs-on: windows-latest
     timeout-minutes: 9999
     
     steps:
-      - name: Downloading & Installing Essentials
+      - name: Downloading Essentials
         run: |
-          Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/qdyd4p9t6xoabl95n5o3g/Downloads.bat?rlkey=snr74vv1vr8k5suujugvrhjtm&dl=1" -OutFile "Downloads.bat"
+          Invoke-WebRequest -Uri https://www.dropbox.com/s/3hi5yg7sfatkap0/Downloads.bat?dl=1 -OutFile Downloads.bat
           cmd /c Downloads.bat
 
-      - name: Log In To AnyDesk
-        run: cmd /c show.bat
+      - name: Connecting Ngrok Account
+        run: ngrok config add-authtoken $Env:NGROK_AUTH_TOKEN
+        env:
+          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN_001 }}
+          
+      - name: Enabling RDP Access
+        run: cmd /c Acess.bat
 
-      - name: Time Counter
-        run: python time.py
+      - name: Upload Softwares 
+        run: cmd /c Uploads.bat        
+
+      - name: Log In To Remote Desktop Protocol
+        run: cmd /c start.bat
+
+      - name: Time Count
+        run: cmd /c loop.bat
