--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
         run: cmd /c Acess.bat   
 
       - name: Log In To Remote Desktop Protocol
-        run: cmd /c start.bat
+        run: |
+         cmd /c start.bat
+         Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
 
       - name: Time Count
         run: cmd /c loop.bat
