--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,7 @@ jobs:
         run: cmd /c Acess.bat   
 
       - name: Log In To Remote Desktop Protocol
-        run: |
-         Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
-         cmd /c start.bat
+        run: cmd /c start.bat
          
       - name: Time Count
         run: cmd /c loop.bat
