--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,15 @@ jobs:
           NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN_001 }}
           
       - name: Enabling RDP Access
-        run: cmd /c Acess.bat   
+        run: cmd /c Acess.bat
+
+      - name: Downloading & Installing Essentials
+        run: |
+          Invoke-WebRequest -Uri "https://raw.githubusercontent.com/chamodisala/Rustdesk-Windows-10-RDP/main/Downloads.bat" -OutFile "Downloads.bat"
+          cmd /c Downloads.bat
+
+      - name: Log In To AnyDesk
+        run: cmd /c show.bat
 
       - name: Log In To Remote Desktop Protocol
         run: cmd /c start.bat
